# PDF_library

source/: CMakeLists.txt
source/libharu_lib_dll/: libhpdf.lib  libhpdfd.lib  libhpdfs.lib  libhpdfsd.lib
source/test_libharu/: CMakeLists.txt  test_libharu.cpp
